# LinMind

./: .gitignore  LICENSE  README.md  pyproject.toml
infra/: database.yml
