[tool.poetry]
name = "linmind"
version = "0.1.0"
description = ""
authors = ["Azetry <lin.y.chen109@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.31.0"
pydantic = "^2.7.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
